test_result.txt
============================= test session starts =============================
platform win32 -- Python 3.11.9, pytest-9.0.2, pluggy-1.6.0
rootdir: D:\nexus-ai
plugins: anyio-4.12.0
collected 0 items / 1 error

=================================== ERRORS ====================================
_________________ ERROR collecting tests/test_backend_mock.py _________________
C:\Users\user\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\python.py:507: in importtestmodule
    mod = import_path(
C:\Users\user\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\pathlib.py:587: in import_path
    importlib.import_module(module_name)
C:\Users\user\AppData\Local\Programs\Python\Python311\Lib\importlib\__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
C:\Users\user\AppData\Local\Programs\Python\Python311\Lib\site-packages\_pytest\assertion\rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests\test_backend_mock.py:9: in <module>
    from nexus_bridge import app, users
E     File "D:\nexus-ai\nexus_bridge.py", line 349
E       except ValidationError asve:
E                              ^^^^
E   SyntaxError: invalid syntax
=========================== short test summary info ===========================
ERROR tests/test_backend_mock.py
!!!!!!!!!!!!!!!!!!! Interrupted: 1 error during collection !!!!!!!!!!!!!!!!!!!!
============================== 1 error in 0.70s ===============================
